--- a/src/app/components/product-page/product-page.component.scss
+++ b/src/app/components/product-page/product-page.component.scss
@@ -1,3 +1,10 @@
+.page-centered{
+  width: 100%;
+  height: calc(100vh - 64px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .product-container {
     display: flex;
     flex-wrap: wrap;
@@ -8,6 +15,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
+    box-shadow: 5px 5px 15px grey;
   }
   
   .product-image {
