--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,15 +1,16 @@
 .card {
   max-width: 300px;
   height: 500px;
-  box-shadow: 0px 0px 5px black;
-  cursor: pointer;
-  gap:10px;
-  transition:0.1s
+  box-shadow: 5px 5px 10px rgb(170, 170, 170);
+  gap: 10px;
+  transition: 0.1s;
 }
 .card:hover {
-scale: 1.01;
+  background-color: #e8e7eb;
 }
-
+.header {
+  cursor: pointer;
+}
 .header-image {
   background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
   background-size: cover;
@@ -22,33 +23,76 @@ scale: 1.01;
     width: 120px;
   }
 }
-.cat-num{
+.info-icon {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  font-size: 22px;
+  color: #005cbb;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  box-shadow: 5px 5px 10px rgb(182, 182, 182);
+
+  cursor: pointer;
+  
+}
+.info-icon:hover {
+  scale: 1.1;
+}
+
+.cat-num {
   position: absolute;
   bottom: 10px;
   right: 5px;
   font-size: 12px;
 }
 .description {
-  max-height: 150px;
+  max-height: 70px;
   overflow: auto;
   font-size: 14px;
 }
 mat-card-title {
-  font-size: 15px;
+  font-size: 17px;
   height: 40px;
   overflow: auto;
+  max-width: 195px;
+  padding-right: 0px !important;
 }
 mat-card-subtitle {
   font-size: 12px;
-  span{
+  span {
     font-size: 13px;
   }
 }
-mat-card-actions{
+mat-card-actions,
+mat-card-content {
   margin-top: auto;
 }
 .additional-data {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+
+.centered-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.star {
+  color: rgb(255, 217, 0);
+  position: relative;
+  z-index: 2;
+  height: 30px;
+  width: 25px;
+  .star-shadow {
+    position: absolute;
+    top: 3px;
+    right: -3px;
+    transform:scale(1.1);
+    color: rgba(43, 42, 42, 0.37);
+    z-index: -1;
+  }
 }
