--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,32 +1,52 @@
 <mat-card class="card" appearance="outlined">
-  <mat-card-header class="header" [routerLink]="['/product',product.id]">
+  <mat-card-header class="header" [routerLink]="['/product', product.id]">
     <div mat-card-avatar class="header-image"></div>
-    <mat-card-title>{{product.title}}</mat-card-title>
-    <mat-card-subtitle><span>Category:</span> {{product.category}}</mat-card-subtitle>
+    <mat-card-title>{{ product.title }}</mat-card-title>
+    <mat-card-subtitle
+      ><span>Category:</span> {{ product.category }}</mat-card-subtitle
+    >
   </mat-card-header>
   <div class="image-cont">
-    <img mat-card-image class="main-img" src="{{product.image}}" alt="Photo">
+    <img
+      mat-card-image
+      class="main-img"
+      src="{{ product.image }}"
+      alt="Photo"
+    />
   </div>
   <mat-card-content>
     <p class="description">
-      {{product.description}}
+      {{ product.description }}
     </p>
     <div class="additional-data">
-      <span>Price <b>{{ product.price}}$</b></span>
+      <span
+        >Price <b>{{ product.price }}$</b></span
+      >
       <div class="centered-flex">
-        <span>rating <b>{{product.rating.rate}}</b> </span>
-        <mat-icon class="star"
-        [style.color]="product.rating.rate < 2 ? 'red' : product.rating.rate < 3 ? 'orange' : 'rgb(255, 217, 0)'"
-        >star<mat-icon
-            class="star-shadow">star</mat-icon></mat-icon>
+        <span
+          >rating <b>{{ product.rating.rate }}</b>
+        </span>
+        <mat-icon
+          class="star"
+          [style.color]="
+            product.rating.rate < 2
+              ? 'red'
+              : product.rating.rate < 3
+              ? 'orange'
+              : 'rgb(255, 217, 0)'
+          "
+          >star<mat-icon class="star-shadow">star</mat-icon></mat-icon
+        >
       </div>
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>Add To Cart <mat-icon>
-        add_shopping_cart
-      </mat-icon></button>
+    <button mat-raised-button (click)="addToCart(product)">
+      Add To Cart <mat-icon> add_shopping_cart </mat-icon>
+    </button>
   </mat-card-actions>
-  <mat-icon class="info-icon" [routerLink]="['/product',product.id]">info</mat-icon>
-  <i class="cat-num">Catalog Number: {{product.id}}</i>
+  <mat-icon class="info-icon" [routerLink]="['/product', product.id]"
+    >info</mat-icon
+  >
+  <i class="cat-num">Catalog Number: {{ product.id }}</i>
 </mat-card>
