added login dialog, added auth service, changes in header, added dashboard route

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,6 +14,9 @@
   </button>
   <span class="title" [routerLink]="['']">My Store</span>
   <span class="spacer"></span>
+  <button mat-icon-button class="favorite-icon" (click)="openLogin()">
+    <mat-icon>login</mat-icon>
+  </button>
   <button mat-icon-button class="favorite-icon">
     <mat-icon>paid</mat-icon>
   </button>
