--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <app-header></app-header>
   </header>
   <main>
-    <router-outlet/>
+    <router-outlet />
   </main>
-  <footer>
-  </footer>
+  <footer></footer>
 </div>
