--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -44,9 +44,13 @@
     <button mat-raised-button (click)="addToCart(product)">
       Add To Cart <mat-icon> add_shopping_cart </mat-icon>
     </button>
+    <button mat-raised-button (click)="openEditProductDialog()">
+      Edit Product <mat-icon> edit </mat-icon>
+    </button>
   </mat-card-actions>
   <mat-icon class="info-icon" [routerLink]="['/product', product.id]"
     >info</mat-icon
   >
-  <i class="cat-num">Catalog Number: {{ product.id }}</i>
+
+  <!-- <i class="cat-num">Catalog Number: {{ product.id }}</i> -->
 </mat-card>
